examples/test/testpolicy15717.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15717
  namespace: namespace481
spec:
  podSelector:
    matchLabels:
      key5: value41
      key42: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value28
      podSelector:
        matchLabels:
          key10: value17
          key45: value45
